// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should test a collection selector with filtering 1`] = `
<div
  className="mcs-selector-layout ant-layout"
>
  <div
    className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle mcs-actionbar-edit "
    style={Object {}}
  >
    <div
      className="mcs-breadcrumb ant-breadcrumb"
    >
      <span>
        <span
          className="ant-breadcrumb-link"
        >
          Welcome to the Collection S…
        </span>
        <span
          className="ant-breadcrumb-separator"
        >
          <span
            className="mcs-icon "
          >
            <i
              className="mcs-chevron-right"
              style={Object {}}
            />
          </span>
        </span>
      </span>
    </div>
    <div
      className="left-part-margin"
    >
      <button
        className="ant-btn add-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="mcs-icon "
        >
          <i
            className="mcs-plus"
            style={Object {}}
          />
        </span>
        <span>
          Add
        </span>
      </button>
      <span
        className="mcs-icon close-icon mcs-table-cursor"
        onClick={[Function]}
      >
        <i
          className="mcs-close"
          style={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="ant-layout"
  >
    <div
      className="mcs-edit-container  ant-layout-content"
    >
      <div
        className="ant-row mcs-collection-view-filters"
      >
        <div
          className="ant-row mcs-collection-view-filters-table-header"
        >
          <div
            className="ant-col-24"
          >
            <span
              className="ant-input-search ant-input-affix-wrapper"
            >
              <input
                className="ant-input"
                disabled={false}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Insert your keywords here"
                style={null}
                type="text"
                value=""
              />
              <span
                className="ant-input-suffix"
              >
                <i
                  aria-label="icon: search"
                  className="anticon anticon-search ant-input-search-icon"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="search"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </i>
              </span>
            </span>
          </div>
        </div>
        <div
          className="ant-row"
        >
          <div
            className="ant-col-24"
          >
            <div
              className="ant-row mcs-collection-view-loading"
            >
              <div
                className="ant-row mcs-collection-view-loading-content"
              >
                <div
                  className="ant-spin ant-spin-spinning"
                >
                  <span
                    className="ant-spin-dot ant-spin-dot-spin"
                  >
                    <i />
                    <i />
                    <i />
                    <i />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should test a collection selector without filtering 1`] = `
<div
  className="mcs-selector-layout ant-layout"
>
  <div
    className="ant-row-flex ant-row-flex-space-between ant-row-flex-middle mcs-actionbar-edit "
    style={Object {}}
  >
    <div
      className="mcs-breadcrumb ant-breadcrumb"
    >
      <span>
        <span
          className="ant-breadcrumb-link"
        >
          Welcome to the Collection S…
        </span>
        <span
          className="ant-breadcrumb-separator"
        >
          <span
            className="mcs-icon "
          >
            <i
              className="mcs-chevron-right"
              style={Object {}}
            />
          </span>
        </span>
      </span>
    </div>
    <div
      className="left-part-margin"
    >
      <button
        className="ant-btn add-button"
        onClick={[Function]}
        type="button"
      >
        <span
          className="mcs-icon "
        >
          <i
            className="mcs-plus"
            style={Object {}}
          />
        </span>
        <span>
          Add
        </span>
      </button>
      <span
        className="mcs-icon close-icon mcs-table-cursor"
        onClick={[Function]}
      >
        <i
          className="mcs-close"
          style={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="ant-layout"
  >
    <div
      className="mcs-edit-container  ant-layout-content"
    >
      <div
        className="ant-row mcs-collection-view-loading"
      >
        <div
          className="ant-row mcs-collection-view-loading-content"
        >
          <div
            className="ant-spin ant-spin-spinning"
          >
            <span
              className="ant-spin-dot ant-spin-dot-spin"
            >
              <i />
              <i />
              <i />
              <i />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
